basics/api-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: k8s-lab-service
spec:
  selector:
    app: k8s-lab
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
